terraform/modules/vpc/main.tf
# VPC
resource "aws_vpc" "main" {
 cidr_block = "10.0.0.0/16"
 
 tags = {
   Name = "Desafio Devops - VPC"
 }
}

#Subnets
resource "aws_subnet" "public_subnets" {
 count      = length(var.public_subnet_cidrs)
 vpc_id     = aws_vpc.main.id
 cidr_block = element(var.public_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)

 
 tags = {
   Name = "Public Subnet ${count.index + 1}"
 }
}
 
resource "aws_subnet" "private_subnets" {
 count      = length(var.private_subnet_cidrs)
 vpc_id     = aws_vpc.main.id
 cidr_block = element(var.private_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)

 
 tags = {
   Name = "Private Subnet ${count.index + 1}"
 }
}

#Gatway
resource "aws_internet_gateway" "gw" {
 vpc_id = aws_vpc.main.id
 
 tags = {
   Name = "Desafio DevOps VPC IG"
 }
}

#Route Table
resource "aws_route_table" "second_rt" {
vpc_id = aws_vpc.main.id
 
route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.gw.id
}
 
tags = {
   Name = "Route Table"
 }
}

#Associar Subnets ao Route ta
resource "aws_route_table_association" "public_subnet_asso" {
 count = length(var.public_subnet_cidrs)
 subnet_id      = element(aws_subnet.public_subnets[*].id, count.index)
 route_table_id = aws_route_table.second_rt.id
}

output "ID" {
  value = aws_vpc.main.default_route_table_id
  description = "ID da VPC"
}
